--- a/style.css
+++ b/style.css
@@ -44,8 +44,6 @@ ul {
     display: flex;
     gap: 82px;
     align-items: center;
-
-
 }
 
 p {
@@ -77,4 +75,65 @@ a {
     text-decoration-line: none;
     font-size: 18px;
     color: #E5E7EB
+}
+
+.mid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 52px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 24px;
+    margin: 8px;
+    max-width: 200px;
+    gap: 8px;
+
+    img {
+        border: #3882F6;
+        border-style: solid;
+        border-width: 8px;
+        border-radius: 8px;
+    }
+
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: 700;
+    color: #1F2937;
+    padding-bottom: 52px;
+}
+
+.card {
+    display: flex;
+}
+
+.bot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    padding: 52px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
+    font-size: 36px;
+    font-style: italic;
+}
+
+.quote-author {
+    align-self: flex-end;
+    font-size: 36px;
+    font-weight: 700;
+    color: #1F2937;
+    font-style: normal;
 }
